5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1630_2944.log
== TEST (2019-04-02 16:14:16) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8*3
var= 8
var2= 1,180, 110
print(total)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:14:22) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8*3
var= 8
var2= 1,180, 110
print(total)
print()
-- EXECUTION TIME:
0.161943
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:22) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8*3
var= 8
var2= 1,180, 110
print(total)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:14:31) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))

var= 8
var2= 1,180, 110
print(total)
print()
-- EXECUTION TIME:
0.152248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:31) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))

var= 8
var2= 1,180, 110
print(total)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:33) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(total)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:14:35) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(total)
print()
-- EXECUTION TIME:
0.218226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:35) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(total)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:50) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(total)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:19) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(total)
print()
-- EXECUTION TIME:
0.131136
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:33) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(total)
print(var)
-- EXECUTION TIME:
0.130708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:34) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(total)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:48) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(var2)
print(var)
-- EXECUTION TIME:
0.302851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:50) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(var2)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:52) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110
print(var2)
print(var)
-- EXECUTION TIME:
0.213482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:13) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
var= 8
var2= 1,180, 110

print(var2)
print(var)
-- EXECUTION TIME:
0.138175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:29) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(total)
print(var)
-- EXECUTION TIME:
0.114729
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:34) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(total)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:17:30) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(1,180,110
-- EXECUTION TIME:
0.129837
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 8
    
                   ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:31) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(1,180,110
-- ERROR:
File "XXXX", line 8
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:32) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(1,180,110
-- ERROR:
File "XXXX", line 8
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:17:35) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(1,180,110)
-- EXECUTION TIME:
0.129017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:36) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(1,180,110)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:19:15) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(
-- EXECUTION TIME:
0.16299
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 8
    
          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:18) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(
-- ERROR:
File "XXXX", line 8
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:19:19) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(
-- EXECUTION TIME:
0.146767
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 8
    
          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:25) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:19:42) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(0)
-- EXECUTION TIME:
0.120426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:43) 
-- CODE:
var= float(input('valor de panquecas:'))
var2=float(input('quatidade de cada igreditente: '))
total= 8
var2= 1,180, 110

print(8)
print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:00) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var= ( 1 ovo, 180 de leite, 110 de farinha)

print(total)
print(var)
-- EXECUTION TIME:
0.199829
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 3
    var= ( 1 ovo, 180 de leite, 110 de farinha)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:01) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var= ( 1 ovo, 180 de leite, 110 de farinha)

print(total)
print(var)
-- ERROR:
File "XXXX", line 3
    var= ( 1 ovo, 180 de leite, 110 de farinha)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:03) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var= ( 1 ovo, 180 de leite, 110 de farinha)

print(total)
print(var)
-- EXECUTION TIME:
0.282179
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 3
    var= ( 1 ovo, 180 de leite, 110 de farinha)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:34) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var= ( 1 ovo, 180 de leite, 110 de farinha)

print(total)
print(var)
-- EXECUTION TIME:
0.1579
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 3
    var= ( 1 ovo, 180 de leite, 110 de farinha)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:35) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var= ( 1 ovo, 180 de leite, 110 de farinha)

print(total)
print(var)
-- ERROR:
File "XXXX", line 3
    var= ( 1 ovo, 180 de leite, 110 de farinha)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:55) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var= ( 1ovo, 180dleite, 110dfarinha)

print(total)
print(var)
-- EXECUTION TIME:
0.149913
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 3
    var= ( 1ovo, 180dleite, 110dfarinha)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:56) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var= ( 1ovo, 180dleite, 110dfarinha)

print(total)
print(var)
-- ERROR:
File "XXXX", line 3
    var= ( 1ovo, 180dleite, 110dfarinha)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:27:08) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var1 = ( 1ovo, 180dleite, 110dfarinha)

print(total)
print(var)
-- EXECUTION TIME:
0.204726
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 3
    var1 = ( 1ovo, 180dleite, 110dfarinha)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:09) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var1 = ( 1ovo, 180dleite, 110dfarinha)

print(total)
print(var)
-- ERROR:
File "XXXX", line 3
    var1 = ( 1ovo, 180dleite, 110dfarinha)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:27:10) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 
var1 = ( 1ovo, 180dleite, 110dfarinha)

print(total)
print(var)
-- EXECUTION TIME:
0.218273
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 3
    var1 = ( 1ovo, 180dleite, 110dfarinha)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:55) 
-- CODE:
var= float(input('quantidade de panquecas:'))
total= 8 


print(var)
print()
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:34:39) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(var)
print(var2)
-- EXECUTION TIME:
0.13814
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:34:40) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(var)
print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:36:33) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(int(8))

-- EXECUTION TIME:
0.121642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:33) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(int(8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:37:36) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(8)
print(1)
print(180)
print(110)

-- EXECUTION TIME:
0.142052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:37) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(8)
print(1)
print(180)
print(110)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:37:49) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(1)
print(180)
print(110)

-- EXECUTION TIME:
0.162333
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:49) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))


print(1)
print(180)
print(110)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:38:36) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))

total=var * var2
print(total)

-- EXECUTION TIME:
0.204269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:36) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))

total=var * var2
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:38:39) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))

total=var * var2
print(total)

-- EXECUTION TIME:
0.14718
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:39) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))

total=var * var2
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:38:56) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))

total= (var * var2)
print(total)

-- EXECUTION TIME:
0.1385
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:57) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ing:"))

total= (var * var2)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:39:46) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= (var * var2)
print(total)

-- EXECUTION TIME:
0.219702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:50) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= (var * var2)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:40:17) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= (8*3)
print(total)

-- EXECUTION TIME:
0.210782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:18) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= (8*3)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:40:23) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= (8)
print(total)

-- EXECUTION TIME:
0.138805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:23) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= (8)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:31) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= var (8)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:40:31) 
-- CODE:
var= float(input("Quantidade de panquecas:"))
var2=float(input("Quantidade de cada ingredientes:"))

total= var (8)
print(total)

-- EXECUTION TIME:
0.206022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    var2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:29) 
-- CODE:
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A + B
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:42:31) 
-- CODE:
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A + B
print(total)

-- EXECUTION TIME:
0.163952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    B=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:32) 
-- CODE:
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A + B
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:43:43) 
-- CODE:
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(total)

-- EXECUTION TIME:
0.182706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    B=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:43) 
-- CODE:
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:49:26) 
-- CODE:
from math import 
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(total)

-- EXECUTION TIME:
0.13914
-- ERROR:
  File "/home/codebench/codes/1630/2944/main.py", line 1
    from math import 
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:26) 
-- CODE:
from math import 
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(total)

-- ERROR:
File "XXXX", line 1
    from math import 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:49:37) 
-- CODE:
from math import *
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(total)

-- EXECUTION TIME:
0.195395
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 3, in <module>
    B=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:38) 
-- CODE:
from math import *
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    B=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:49:58) 
-- CODE:
from math import *
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(R)

-- EXECUTION TIME:
0.206845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 3, in <module>
    B=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:50:00) 
-- CODE:
from math import *
A= float(input("Quantidade de panquecas:"))
B=float(input("Quantidade de cada ingredientes:"))
R= A(8)+ B(1,180,110)
print(R)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    B=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
